version 0.6:
	* qpid::proton::Messenger returns incoming trackers on get.
	* qpid::proton::Messenger returns outgoing tracker on put.
	* qpid::proton::Message exposes the body property.
	* qpid::proton::Message exposes the properties property.

version 0.5:
	* Added the qpid::proton::Data type.
	* Added the qpid::proton::put_array_into method.
	* Added the qpid::proton::get_array_from method.
	* Added the qpid::proton::put_list_into method.

version 0.4:
	* Unit tests for qpid::proton::Message.
	* Unit tests for qpid::proton::Messenger.

version 0.3:
	* No language-specific features developed in this release.

version 0.2:
	* First implementation of the stable APIs on top of swig.
	* Provides the qpid::proton::Message class.
	* Provides the qpid::proton::Messenger class.
	* Provides a send and recv example for the Perl bindings.