@@ -51,6 +51,9 @@ foreach (@messages)
     # try a few different body types
     my $body_type = int(rand(4));
     $msg->set_property("sent", "" . localtime(time));
+    $msg->get_annotations->{"version"} = 1.0;
+    $msg->get_annotations->{"pill"} = "RED";
+
   SWITCH: {
       $body_type == 0 && do { $msg->set_body("It is now " . localtime(time));};
       $body_type == 1 && do { $msg->set_body(rand(65536), qpid::proton::FLOAT); };
