@@ -3,6 +3,7 @@ version 0.6:
 	* qpid::proton::Messenger returns outgoing tracker on put.
 	* qpid::proton::Message exposes the body property.
 	* qpid::proton::Message exposes the properties property.
+	* qpid::proton::Message exports the annotations property.
 
 version 0.5:
 	* Added the qpid::proton::Data type.
